--- a/applications/latexsupport/starstyle.sty
+++ b/applications/latexsupport/starstyle.sty
@@ -17,10 +17,10 @@
 
 
 % %...reference and link commands
-\newcommand*{\cref}[3]{#1~\ref{#2}}
-\newcommand*{\xlabel}[1]{\label{\protect{xref_#1}}}
-\newcommand*{\latexhtml}[3]{#1}
-\renewcommand*{\htmladdnormallink}[2]{\href{#2}{#1}\footnote{\url{#2}}}
+\newcommand{\cref}[3]{#1~\ref{#2}}
+\newcommand{\xlabel}[1]{\label{\protect{xref_#1}}}
+\newcommand{\latexhtml}[3]{#1}
+\renewcommand{\htmladdnormallink}[2]{\href{#2}{#1}\footnote{\url{#2}}}
 %\renewcommand*{\html}[1]{}
 
 
