--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -114,8 +114,7 @@ We recommend the following:
 \subsubsection*{Why these recommendations?}
 
 For large-area maps it is important to process a full observation in a
-single chunk. See the text box on \latexhtml{Page~\pageref{box:chunk}\
-}{\htmlref{Chunking}{page:text}}\ for an explanation of chunking. For large maps, using normal map-maker parameters a machine having 96\,GB is acceptable. It is important that the memory is as fast as can be afforded, as RAM speed has a direct linear effect on processing time given that the time-series data are continually being funnelled through the CPU.
+single chunk. See the text box on \latexhtml{Page~\pageref{box:chunk}}{\htmlref{Chunking}{box:chunk}}\ for an explanation of chunking. For large maps, using normal map-maker parameters a machine having 96\,GB is acceptable. It is important that the memory is as fast as can be afforded, as RAM speed has a direct linear effect on processing time given that the time-series data are continually being funnelled through the CPU.
 
 For blank-field surveys, data that only use 850\,$\mu$m, or smaller
 regions of the sky you can usefully run the map-maker with less memory
@@ -1787,7 +1786,7 @@ pixels---the default at 850$\mu$m.
 %\\*\\*
 
 \subsubsection{Chunking}%\\
-%\item[Chunking \label{box:chunk}]
+%\label{box:chunk}
 The map-maker then determines if the raw data should be split and
 processed in more than one chunk. In this map the data are reduced in
 one continuous piece: \param{Continuous chunk 1 / 1}. Chunking is
