kappa: sun95. removed unecessary appendix renumbering.

--- a/applications/kappa/sun95.tex
+++ b/applications/kappa/sun95.tex
@@ -11255,7 +11255,7 @@ the UK Starlink Project: KAPPA,... Starlink is run by CCLRC on behalf of PPARC. 
 
 \newpage
 \appendix
-\begin{small}
+%\begin{small}
 \section{\xlabel{ap_summary}An Alphabetical Summary of KAPPA Commands
 \label{ap:summary}}
 
@@ -12423,7 +12423,7 @@ WCS component of an NDF.
  Checks the version number of the installed package.
 \end{description}
 \end{description}
-\end{small}
+%\end{small}
 
 \section{\xlabel{ap_quotas}Quotas to run KAPPA\label{ap:quotas}}
 
