latexsupport: require siunitx in starlink.cls

--- a/applications/latexsupport/starlink.cls
+++ b/applications/latexsupport/starlink.cls
@@ -40,6 +40,9 @@
 
 \RequirePackage{mathpazo}
 
+% units
+\RequirePackage{siunitx}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Packages required for all reports
