--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -4365,7 +4365,7 @@ curve-of-growth---see \cref{Figure}{fig:cog}{the figure below}. To correct for a
 aperture size differing from 60-arcsec diameter you should read off the
 appropriate scaling factor for your FCF from the graph below.
 
-\myfig{sc21_curveofgrowth}{[h!]}{width=\linewidth,height=7.5cm}{fig:cog}{
+\myfig{sc21_curveofgrowth}{[h!]}{width=\linewidth}{fig:cog}{
   Aperture photometry curve of growth}{
   Aperture photometry curve of growth normalised for a 60-arcsec
   aperture at 450$\mu$m \textbf{(left)} and 850$\mu$m
