--- a/applications/latexsupport/starstyle.sty
+++ b/applications/latexsupport/starstyle.sty
@@ -21,9 +21,10 @@
 \newcommand{\xlabel}[1]{\label{\protect{xref_#1}}}
 \newcommand{\latexhtml}[3]{#1}
 \renewcommand{\htmladdnormallink}[2]{\href{#2}{#1}\footnote{\url{#2}}}
-%\renewcommand*{\html}[1]{}
 
 
+%% fix caret
+\renewcommand{\^}{\textasciicircum}
 
 \newcommand*{\scfrontmatter}{
 \renewcommand{\thepage}{\roman{page}}
